# uniffi-template

./: Cargo.toml
chisel-android/: build.gradle.kts  settings.gradle.kts
chisel-android/app/: build.gradle.kts
chisel-android/app/src/androidTest/java/au/com/example/app/: ExampleInstrumentedTest.kt
chisel-android/app/src/main/: AndroidManifest.xml
chisel-android/app/src/main/java/au/com/example/app/: MainActivity.kt
chisel-android/app/src/main/java/au/com/example/app/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
chisel-android/app/src/main/res/values/: strings.xml  themes.xml
chisel-android/app/src/test/java/au/com/example/app/: ExampleUnitTest.kt
chisel-android/lib/: build.gradle.kts
chisel-android/lib/src/main/: AndroidManifest.xml
chisel-android/plugins/: build.gradle.kts
chisel-android/plugins/src/main/kotlin/au/com/example/plugins/: Enums.kt  UniFfiAndroidPlugin.kt
chisel-ffi/: Cargo.toml  build.rs  uniffi.toml
chisel-ffi/src/: chisel.udl  lib.rs
ffi-bindgen/src/: main.rs
